--- a/composer.json
+++ b/composer.json
@@ -4,8 +4,8 @@
   "license": "MIT",
   "require": {
     "php": ">=5.5",
-    "guzzlehttp/guzzle": "~6.1",
-    "psr/http-message": "~1.0"
+    "guzzlehttp/guzzle": "^7.0",
+    "psr/http-message": "~2.0"
   },
   "require-dev": {
     "phpunit/phpunit": "~4.8,<5.2"
