--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
     "psr/http-message": "~2.0"
   },
   "require-dev": {
-    "phpunit/phpunit": "~4.8,<5.2"
+    "phpunit/phpunit": "^10.0"
   },
   "autoload": {
     "psr-4": {
