--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
   "description": "SellerCenter SDK for PHP",
   "license": "MIT",
   "require": {
-    "php": ">=5.5",
+    "php": ">=8.1",
     "guzzlehttp/guzzle": "^7.0",
     "psr/http-message": "~2.0"
   },
@@ -14,6 +14,9 @@
     "psr-4": {
       "": "src"
     }
+  },
+  "scripts": {
+    "test": "vendor/bin/phpunit"
   },
   "minimum-stability": "stable"
 }
